--- a/_posts/2012-11-24-test.markdown
+++ b/_posts/2012-11-24-test.markdown
@@ -3,11 +3,8 @@ layout: default
 title: "Testing"
 ---
 
-# Title
-
-`code`
-
-  Ruby code block
-  sa vise linija
-
-
+{% highlight ruby linenos%}
+def foo
+  puts 'foo'
+end
+{% endhighlight %}
